# dp-lcd-ui-lab

./: .cproject  .gitignore  .project  CMakeLists.txt  STM32F303VCTX_FLASH.ld  STM32F303VCTx_FLASH.ld  lcd_lab Debug.launch  lcd_lab.ioc
.devcontainer/: Dockerfile  devcontainer.json
Inc/: app.h  driver.h  keyboard.h  lcd.h  lv_conf.h  main.h  player.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  touch.h
Src/: app.c  driver.c  keyboard.c  lcd.c  main.c  memory.c  player.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c  touch.c
cmake/: stm32_gcc.cmake
cmake/stm32/: common.cmake
lcd_libs/: CMakeLists.txt  lab_5_icons.c  lab_5_icons.h  lcd_ili93xx_driver.c  lcd_ili93xx_driver.h  open32f3_lcd_touch_utils.c  open32f3_lcd_touch_utils.h  open32f3_lcd_utils.c  open32f3_lcd_utils.h
melody_files/: melody_1.c  melody_1.h  melody_2.c  melody_2.h  melody_3.c  melody_3.h  melody_4.c  melody_4.h  melody_5.c  melody_5.h  melody_6.c  melody_6.h  melody_7.c  melody_7.h  melody_8.c  melody_8.h  melody_9.c  melody_9.h
